# advent-of-code

./: Cargo.toml
2020/: Cargo.toml
2020/src/: lib.rs
2020/src/days/: mod.rs
2020/src/days/01/: one.rs  tests.rs
2020/src/days/02/: two.rs
2020/src/days/03/: three.rs
2020/src/days/04/: four.rs
2020/src/days/05/: five.rs  tests.rs
2020/src/days/06/: README.md  six.rs
2020/src/days/07/: seven.rs
2020/src/days/08/: README.md  eight.rs
2020/src/days/09/: nine.rs
2020/src/days/10/: ten.rs  tests.rs
2020/src/days/11/: README.md  eleven.rs  tests.rs
2021/: Cargo.toml
2021/src/: days.rs
2021/src/days/: mod.rs
2021/src/days/01/: README.md  one.rs  tests.rs
2021/src/days/02/: tests.rs  two.rs
2021/src/days/03/: tests.rs  three.rs
2021/src/days/04/: README.md  four.rs  tests.rs
2021/src/days/05/: README.md  five.rs  tests.rs
2021/src/days/06/: README.md  six.rs  tests.rs
2021/src/days/07/: README.md  seven.rs  tests.rs
2021/src/days/08/: README.md  eight.rs  tests.rs
2021/src/days/09/: README.md  nine.rs  tests.rs
2021/src/days/10/: README.md  ten.rs  tests.rs
2021/src/days/11/: README.md  eleven.rs
2022/: Cargo.toml
2022/src/: days.rs
src/: main.rs
src/days/: day1.rs  mod.rs
src/days/1/: one.rs
src/days/10/: README.md  ten.rs  tests.rs
src/days/2/: two.rs
src/days/3/: README.md  three.rs
src/days/4/: README.md  four.rs
src/days/5/: README.md  five.rs  tests.rs
src/days/6/: six.rs
src/days/7/: README.md  seven.rs
src/days/8/: eight.rs
src/days/9/: README.md  nine.rs
src/days/day2/: day2.rs
(+11 files in other folders)
